# anoma

./: .drone.yml  .gitignore  Cargo.toml  Makefile  README.md  default.nix  shell.nix
.anoma/: config.toml  global-config.toml  internal-testnet-2.5d9325cd94c.toml
.anoma/internal-testnet-2.5d9325cd94c/: config.toml
.anoma/tendermint/config/: config.toml  genesis.json
apps/: Cargo.toml  build.rs
apps/src/lib/: cli.rs  config.rs  mod.rs  wallet.rs
docs/: book.toml  default.nix
docs/src/: README.md  SUMMARY.md
docs/src/user-guide/: README.md  ledger.md
filter_template/: .gitignore  filter.wasm
genesis/: genesis.toml  testnet.toml
ledger/: .gitignore  Cargo.toml  build.rs
matchmaker_template/: .gitignore  matchmaker.wasm
nix/: crate-overrides.nix  default.nix  pkgs.nix
proof_of_stake/src/: lib.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
tech-specs/src/: SUMMARY.md
tests/: Cargo.toml
tests/src/: e2e.rs  lib.rs
tests/src/vm_host_env/: ibc.rs  mod.rs
txs/tx_from_intent/: tx.wasm
txs/tx_template/: .gitignore  tx.wasm
txs/tx_transfer/: tx.wasm
txs/tx_update_vp/: .gitignore  tx.wasm
vm_env/: Cargo.toml
vm_env/src/: lib.rs
vm_macro/src/: lib.rs
vps/vp_template/: .gitignore  vp.wasm
vps/vp_token/: .gitignore  vp.wasm
vps/vp_user/: vp.wasm
wasm/: mm_filter_token_exch.wasm  mm_token_exch.wasm  tx_bond.wasm  tx_from_intent.wasm  tx_init_account.wasm  tx_transfer.wasm  tx_unbond.wasm  tx_update_vp.wasm  tx_withdraw.wasm  vp_fountain.wasm  vp_token.wasm  vp_user.wasm  vp_user_2.wasm
wasm/filter_template/: filter.wasm
wasm/matchmaker_template/: matchmaker.wasm
wasm/wasm_source/: Cargo.toml  Makefile
(+70 files in other folders)
