[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Anoma tests"
edition = "2021"
license = "GPL-3.0"
name = "anoma_tests"
resolver = "2"
version = "0.2.0"

[features]
default = ["wasm-runtime"]
wasm-runtime = ["anoma/wasm-runtime"]

[dependencies]
anoma = {path = "../shared", features = ["testing", "ibc-vp"]}
anoma_vm_env = {path = "../vm_env"}
chrono = "0.4.19"
concat-idents = "1.1.2"
# TODO temp fork for borsh coding
# Also, using the same version of tendermint-rs as we do here.
ibc = {git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/rebase_v0.23.0", features = ["mocks", "borsh"]}
ibc-proto = {git = "https://github.com/heliaxdev/ibc-rs", branch = "yuji/rebase_v0.23.0"}
test-env-log = {version = "0.2.7", default-features = false, features = ["trace"]}
# temporarily using fork work-around for https://github.com/informalsystems/tendermint-rs/issues/971
tendermint = {git = "https://github.com/heliaxdev/tendermint-rs", branch = "yuji/rebase_v0.23.0"}
tracing = "0.1.26"
tracing-subscriber = {version = "0.2.25", default-features = false, features = ["env-filter", "fmt"]}
serde_json = { version = "1.0.65" }
sha2 = "0.9.3"

[dev-dependencies]
anoma_apps = {path = "../apps", features = ["testing"]}
assert_cmd = "1.0.7"
borsh = "0.9.1"
color-eyre = "0.5.11"
escargot = "0.5.2"
eyre = "0.6.5"
itertools = "0.10.0"
libp2p = "0.38.0"
pretty_assertions = "0.7.2"
rexpect = "0.4.0"
tempfile = "3.2.0"

# This is used to enable logging from tests
[package.metadata.cargo-udeps.ignore]
normal = ["test-env-log", "tracing-subscriber"]
